第二天,完成了主页home

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: xuegaodian
  * @Date: 2021-02-24 21:45:30
- * @LastEditTime: 2021-02-25 16:57:22
+ * @LastEditTime: 2021-02-27 01:12:55
  * @LastEditors: Please set LastEditors
  * @Description: In User Settings Edit
  * @FilePath: \新建文件夹 (2)f:\前端\xuegaodian\index.html
@@ -15,14 +15,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>xuegaodian</title>
     <link rel="stylesheet" href="assets/css/main.css">
+    <script src="font_2386976_2xley37zk0n/iconfont.js"></script>
 </head>
 
-<body class="is-preload">
-    <!-- <div class="v">
-        <video class="f" id="bgvid" playsinline="" autoplay muted loop="">
-            <source src="images/11.mp4" type="video/mp4">
-        </video>
-    </div> -->
+<body>
+
 
     <!-- Wrapper -->
     <div id="wrapper" class="fade-in">
@@ -36,7 +33,11 @@
                 This is my email:
                 <a href="javascript:;">1049584100@qq.com</a>.
                 <br /><br /><br /><br />
-                <a class="iconfont" id="down" href="javascript:;">&#xe647;</a>
+                <a id="down" href="javascript:;">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-xiala"></use>
+                    </svg>
+                </a>
             </p>
 
         </div>
@@ -56,20 +57,184 @@
             </div>
             <div class="icon">
                 <ul>
-                    <li> <a href="#" class="iconfont">&#xe611;</a> </li>
-                    <li> <a href="#" class="iconfont">&#xe630;</a> </li>
-                    <li> <a href="#" class="iconfont">&#xe67c;</a> </li>
-                    <li> <a href="#" class="iconfont">&#xe646;</a> </li>
+                    <li> <a href="#" class="iconfont">
+                            <svg class="icon icon1" aria-hidden="true">
+                                <use xlink:href="#icon-weixin"></use>
+                            </svg>
+                        </a> </li>
+                    <li> <a href="#" class="iconfont">
+                            <svg class="icon" aria-hidden="true">
+                                <use xlink:href="#icon-weibo"></use>
+                            </svg>
+                        </a> </li>
+                    <li> <a href="#" class="iconfont">
+                            <svg class="icon" aria-hidden="true">
+                                <use xlink:href="#icon-huaban88"></use>
+                            </svg>
+                        </a> </li>
+                    <li> <a href="#" class="iconfont">
+                            <svg class="icon" aria-hidden="true">
+                                <use xlink:href="#icon-QQ"></use>
+                            </svg>
+                        </a> </li>
                 </ul>
             </div>
         </nav>
 
         <!-- main -->
         <div id="main">
-            <hr>2021/2/25
-        </div>
+            <span class="date"></span>
+            <span class="date2">February 25, 2021</span>
+            <span class="date1"></span>
 
+            <div id="main1">
+                <h1>&nbsp;&nbsp;&nbsp;&nbsp;AND THIS IS A <br />MASSIVE HEADLINE</h1><br /><br />
+                <span>&nbsp;&nbsp;&nbsp;&nbsp;Aenean ornare velit lacus varius enim ullamcorper proin
+                    aliquam<br /><br />
+                    facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br /><br />
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;amet
+                    nullam sed etiam veroeros.</span>
+                <p class="pt">
+                    <img src="images/bg.jpg" alt="">
+                </p>
+                <a href="#">
+                    FULL STORY
+                </a>
+            </div>
+
+            <div id="case">
+                <span class="h"></span>
+                <span class="h-down"></span>
+
+                <div class="left">
+                    <span class="date-left">February 25, 2021</span>
+                    <h1>&nbsp;&nbsp;&nbsp;&nbsp;AND THIS IS A <br />MASSIVE HEADLINE</h1><br /><br />
+                    <p class="pt">
+                        <img src="images/bg.jpg" alt="">
+                    </p>
+                    <span>&nbsp;&nbsp;&nbsp;&nbsp;Aenean ornare velit lacus varius enim ullamcorper proin
+                        aliquam<br /><br />
+                        facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br /><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;amet
+                        nullam sed etiam veroeros.</span>
+
+                    <a href="#">
+                        FULL STORY
+                    </a>
+                </div>
+                <span class="hr-1"></span>
+                <div class="left1">
+                    <span class="date-left">February 25, 2021</span>
+                    <h1>&nbsp;&nbsp;&nbsp;&nbsp;AND THIS IS A <br />MASSIVE HEADLINE</h1><br /><br />
+                    <p class="pt">
+                        <img src="images/bg.jpg" alt="">
+                    </p>
+                    <span>&nbsp;&nbsp;&nbsp;&nbsp;Aenean ornare velit lacus varius enim ullamcorper proin
+                        aliquam<br /><br />
+                        facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br /><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;amet
+                        nullam sed etiam veroeros.</span>
+
+                    <a href="#">
+                        FULL STORY
+                    </a>
+                </div>
+                <div class="left2">
+                    <span class="date-left">February 25, 2021</span>
+                    <h1>&nbsp;&nbsp;&nbsp;&nbsp;AND THIS IS A <br />MASSIVE HEADLINE</h1><br /><br />
+                    <p class="pt">
+                        <img src="images/bg.jpg" alt="">
+                    </p>
+                    <span>&nbsp;&nbsp;&nbsp;&nbsp;Aenean ornare velit lacus varius enim ullamcorper proin
+                        aliquam<br /><br />
+                        facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br /><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;amet
+                        nullam sed etiam veroeros.</span>
+
+                    <a href="#">
+                        FULL STORY
+                    </a>
+                </div>
+                <span class="hr-2"></span>
+                <span class="hr-3"></span>
+                <div class="right">
+                    <span class="date-left">February 25, 2021</span>
+                    <h1>&nbsp;&nbsp;&nbsp;&nbsp;AND THIS IS A <br />MASSIVE HEADLINE</h1><br /><br />
+                    <p class="pt">
+                        <img src="images/bg.jpg" alt="">
+                    </p>
+                    <span>&nbsp;&nbsp;&nbsp;&nbsp;Aenean ornare velit lacus varius enim ullamcorper proin
+                        aliquam<br /><br />
+                        facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br /><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;amet
+                        nullam sed etiam veroeros.</span>
+
+                    <a href="#">
+                        FULL STORY
+                    </a>
+                </div>
+                <div class="right1">
+                    <span class="date-left">February 25, 2021</span>
+                    <h1>&nbsp;&nbsp;&nbsp;&nbsp;AND THIS IS A <br />MASSIVE HEADLINE</h1><br /><br />
+                    <p class="pt">
+                        <img src="images/bg.jpg" alt="">
+                    </p>
+                    <span>&nbsp;&nbsp;&nbsp;&nbsp;Aenean ornare velit lacus varius enim ullamcorper proin
+                        aliquam<br /><br />
+                        facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br /><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;amet
+                        nullam sed etiam veroeros.</span>
+
+                    <a href="#">
+                        FULL STORY
+                    </a>
+                </div>
+                <div class="right2">
+                    <span class="date-left">February 25, 2021</span>
+                    <h1>&nbsp;&nbsp;&nbsp;&nbsp;AND THIS IS A <br />MASSIVE HEADLINE</h1><br /><br />
+                    <p class="pt">
+                        <img src="images/bg.jpg" alt="">
+                    </p>
+                    <span>&nbsp;&nbsp;&nbsp;&nbsp;Aenean ornare velit lacus varius enim ullamcorper proin
+                        aliquam<br /><br />
+                        facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br /><br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;amet
+                        nullam sed etiam veroeros.</span>
+
+                    <a href="#">
+                        FULL STORY
+                    </a>
+                </div>
+                <div id="button">
+                    <ul>
+                        <li class="one">1</li>
+                        <li>2</li>
+                        <li>3</li>
+                        <li>...</li>
+
+                        <li>7</li>
+                        <li>8</li>
+                        <li>9</li>
+                        <li class="next">NEXT ></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <footer>
+            <h1>如果你对我感兴趣，请发邮箱给我哦！</h1>
+            <p class="p1">When it comes to family, we are all still children at heart. No matter how old we get,we
+                always need a place to call
+                home.</p>
+            <p class="p2">面对家人的时候，在我们内心深处我们始终觉得自己还是孩子。不管我们年龄多大了，我们还需要一个称之为家的地方。</p>
+            <input id="text1" type="text" value="name">
+            <input id="email1" type="email" value="email">
+            <textarea id="textarea1">message</textarea>
+            <input id="submit1" type="submit" value="发送邮件">
+            <input id="reset1" type="reset" value="重置">
+        </footer>
     </div>
+
+
 
     <!-- Scripts -->
     <script>
